--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,94 @@
+aiodns==2.0.0
+aiohttp==3.7.4.post0
+appdirs==1.4.4
+APScheduler==3.6.3
 asgiref==3.3.4
-Django==3.2.4
-Pillow==8.2.0
-pytz==2021.1
+astroid==2.4.2
+async-timeout==3.0.1
+attrs==20.3.0
+Automat==20.2.0
+ccxt==1.52.96
+certifi==2020.11.8
+cffi==1.14.3
+chardet==3.0.4
+constantly==15.1.0
+coverage==5.5
+cryptography==3.2.1
+cssselect==1.1.0
+cycler==0.10.0
+debugpy==1.3.0
+distlib==0.3.1
+dj-database-url==0.5.0
+Django==3.2
+django-heroku==0.0.0
+dnspython==1.16.0
+eventlet==0.31.1
+filelock==3.0.12
+greenlet==1.1.0
+h2==3.2.0
+hpack==3.0.0
+hyperframe==5.2.0
+hyperlink==21.0.0
+idna==2.10
+incremental==21.3.0
+isort==5.6.4
+itemadapter==0.3.0
+itemloaders==1.0.4
+jellyfish==0.8.2
+jmespath==0.10.0
+kiwisolver==1.3.1
+lazy-object-proxy==1.4.3
+lib50==2.0.9
+lxml==4.6.3
+markdown2==2.3.10
+matplotlib==3.4.2
+mccabe==0.6.1
+multidict==5.1.0
+mysqlclient==2.0.3
+numpy==1.20.3
+pandas==1.2.4
+parsel==1.6.0
+pexpect==4.8.0
+Pillow==8.0.1
+pipenv==2020.11.15
+priority==1.3.0
+Protego==0.1.16
+ptyprocess==0.6.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycares==4.0.0
+pycparser==2.20
+PyDispatcher==2.0.5
+pylint==2.6.0
+pynum==0.0.1
+pyodbc==4.0.30
+pyOpenSSL==20.0.1
+pyparsing==2.4.7
+PySide2==5.15.2
+python-dateutil==2.8.1
+python-telegram-bot==13.4.1
+Pythonic==1.6
+pytz==2020.4
+PyYAML==5.3.1
+queuelib==1.6.1
+requests==2.25.0
+Scrapy==2.5.0
+service-identity==21.1.0
+shiboken2==5.15.2
+six==1.15.0
 sqlparse==0.4.1
+submit50==3.0.2
+termcolor==1.1.0
+toml==0.10.2
+tornado==6.1
+Twisted==21.7.0
+typing-extensions==3.10.0.0
+tzlocal==2.1
+urllib3==1.26.2
+virtualenv==20.4.3
+virtualenv-clone==0.5.4
+w3lib==1.22.0
+whitenoise==5.2.0
+wrapt==1.12.1
+yarl==1.6.3
+zope.interface==5.4.0
